public class ConstAnimParams
{
    public const string PLAYER_ANIM_IDLE = "idle";
    public const string PLAYER_ANIM_ATTACK = "attack";
    public const string PLAYER_ANIM_RUN = "run";
    public const string PLAYER_ANIM_WALK = "walk";
<<<<<<< HEAD:Assets/_Games/_Scripts/GameTools/Contans/ConstAnimParams.cs
    public const string PLAYER_ANIM_DIE = "die";
=======

    public const string PLAYER_TAG = "player";
    public const string ENEMY_TAG = "enemy";



>>>>>>> origin/feature/quynhtv:Assets/_Games/_Scripts/GameTools/Contans/MyConstan.cs
}

public class ConstTags
{
    public const string TAG_ENEMY = "Enemy";
}